pcss config, font fixed on mobile browser

--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,1 @@
-@font-face{font-family:'bahnschrift';src:url("https://www.cufonfonts.com/download/font-single/34764/bahnschrift")}p{font-family:'bahnschrift'}h1{font-family:'bahnschrift',sans-serif;color:#0c3c3f}div{color:#008183}b{color:#000}
+@font-face{font-family:'bahnschrift';src:url("https://ff.static.1001fonts.net/a/l/alte-din-1451-mittelschrift.regular.ttf")}p{font-family:'bahnschrift'}h1{font-family:'bahnschrift',sans-serif;color:#0c3c3f}div{color:#008183}b{color:#000}
